# pyo3-bug

./: Cargo.toml  test.c
